# LogikAnalyse

./: .gitignore  README.md  Tiefgestellt für UTF.url  logik_analyse_gui.code-workspace  logo.afdesign
.fleet/: settings.json
.github/workflows/: main.yml
LogikLib/: Cargo.toml
LogikLib/src/: aussagen.rs  lib.rs
LogikLib/src/aussagen/: structures.rs
logik_analyse_gui/: package-lock.json  package.json
logik_analyse_gui/components/: Formel.tsx  Formelbereich.tsx  Werkzeugkasten.tsx
logik_analyse_gui/pages/: index.tsx
logik_analyse_gui/src-tauri/: Cargo.toml  tauri.conf.json
logik_analyse_gui/src-tauri/icons/: icon.icns
logik_analyse_gui/src-tauri/src/: main.rs
logik_analyse_gui/styles/: globals.css
logik_cli/: Cargo.toml  testScript.logikScript  testeBelegung.logikScript
logik_cli/resources/: syntax_help.md
logik_cli/src/: main.rs
logik_lib/: Cargo.toml
logik_lib/src/: aussagen.rs  lib.rs  script.rs
logik_lib/src/aussagen/: parsing.rs  structures.rs
